PR-3: Navbar collapsing issue has been resolved

--- a/src/index.css
+++ b/src/index.css
@@ -247,7 +247,7 @@ h1 {
 .page-enter-active {
   opacity: 1;
   transform: scale(1);
-  transition: opacity 300ms, transform 300ms;
+  transition: opacity 600ms, transform 600ms;
 }
 
 .page-exit {
@@ -258,7 +258,7 @@ h1 {
 .page-exit-active {
   opacity: 0;
   transform: scale(0.9);
-  transition: opacity 300ms, transform 300ms;
+  transition: opacity 600ms, transform 600ms;
 }
 
 
